# lead-sniffer-python

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
answer_schemas/: lead_schema.py
data_functions/: data_functions.py  run_gpt.py
json/: instructions.json
modules/: data_functions.py  json_functions.py  run_gpt.py
schemas/: lead_schema.py
xlsx_files/: .~lock.output.xlsx#  2.xlsx  output.xlsx
