[tool.poetry]
package-mode = false
name = "my-app"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.35.8"
python-dotenv = "^1.0.1"
typechat = {git = "https://github.com/microsoft/TypeChat", subdirectory = "python"}
pandas = "^2.2.2"
openpyxl = "^3.1.5"
flask-cors = "^4.0.1"
flask = "^3.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
